<resources>
    <string name="app_name">RenTool</string>
    <string name="avatar">Avatar Image</string>
    <string name="welcome_title">Tool Rental</string>
    <string name="welcome_description">A daily-use app to rent tools.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_logo">App logo</string>
    <string name="google_logo">Google Logo</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="apple_logo">Apple Logo</string>
    <string name="back_button">back_button</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="tool_name">Tool Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="add_item">Add Item</string>
    <string name="default_web_client_id">284005807732-l0lris65fkf0h1sjua9jqglfing5d6de.apps.googleusercontent.com</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="to_your_account">to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create">Create</string>
    <string name="your_account">your account</string>
    <string name="signup">Signup</string>
    <string name="tool_price">Tool Price</string>
    <string name="calendar">Calendar</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="reset">Reset</string>
    <string name="tools_rented">Tools Rented</string>
    <string name="logout">Logout</string>
    <string name="current_rented_tools">Current Rented Tools</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">phone</string>
    <string name="username">username</string>
    <string name="search_tools">Search tools</string>
    <string name="filter">Filter</string>
    <string name="book">Book</string>
    <string name="search">Search</string>
</resources>
