<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/sign_in_up_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tool_name"
            android:textColorHint="@color/black"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:inputType="text"
            android:background="@drawable/fields_bg"
            android:backgroundTint="@color/white"
            />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameEditText"
            android:hint="@string/description"
            android:textColorHint="@color/black"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="3"
            android:background="@drawable/fields_bg"
            android:backgroundTint="@color/white"/>

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionEditText"
            android:hint="@string/price"
            android:textColorHint="@color/black"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fields_bg"
            android:backgroundTint="@color/white"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/addItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/priceEditText"
            android:text="@string/add_item"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/fields_bg"
            android:backgroundTint="@color/white"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>