<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- White top section with logo -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:id="@+id/whiteSection"
        android:layout_alignParentTop="true">

        <!-- Logo ImageView -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_logo"/>

    </RelativeLayout>

    <!-- Blue bottom section with text and buttons -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_screen_bg"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/whiteSection">

        <!-- Description TextView -->
        <TextView
            android:id="@+id/appDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcome_description"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/sign_in"
            android:textSize="18sp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/black"
            android:background="@drawable/fields_bg"
            android:backgroundTint="@color/white"
            android:layout_below="@id/appDescription"
            android:layout_centerHorizontal="true" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textColor="@color/white"
            android:background="@drawable/fields_bg"
            android:backgroundTint="@color/black"
            android:layout_below="@id/signInButton"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>
