<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <!-- Avatar ImageView -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatarImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_avatar_placeholder"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/avatar"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        android:onClick="onUploadAvatarClick"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatarImageView"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:enabled="false"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey"
        android:enabled="false"
        android:background="@null"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="@color/grey"
        android:textColor="@color/grey"
        android:enabled="false"
        android:background="@null"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/phoneEditText"
        android:layout_marginTop="15dp"
        android:text="@string/edit_profile"
        android:textSize="18sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:textColor="@color/black"
        />

    <!-- Balance TextView -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/balanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Balance: $0"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_below="@id/editProfileButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <!-- Add Credit Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCreditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="Add Credit"
        android:textColor="@color/black"
        android:layout_below="@id/balanceTextView"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"/>

    <!-- Withdraw Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/withdrawButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="Withdraw"
        android:textColor="@color/black"
        android:layout_below="@id/balanceTextView"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"/>

    <!-- Rented Tools Layout -->
    <LinearLayout
        android:id="@+id/rentedToolsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/withdrawButton"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_rented_tools"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/rentedToolsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Placeholder for rented tools -->
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        android:layout_above="@id/bottomNavigationBar" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:onClick="onLogoutClick">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/logout" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:text="@string/logout"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_gravity="end"
            android:onClick="onMessageClick">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/chat" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:text="Message Us"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/navigation_bar"
            android:background="@color/transparent"
            app:labelVisibilityMode="labeled"/>
    </LinearLayout>

</RelativeLayout>
